added the latest section

--- a/home.html
+++ b/home.html
@@ -102,8 +102,83 @@
     </div>
     <!-- all the card and form section parent  -->
     <div class="all-form-section">
+      <!-- latest section -->
+      <div id="latest-section">
+        <div class="flex justify-between items-center">
+          <h1 class="ml-4 my-[20px] font-bold text-[19px]">Latest Payment</h1>
+          <p class="text-gray-400 mr-4">View All</p>
+        </div>
+        <!-- cards -->
+        <div class="list rounded-box">
+          <li class="list-row list bg-base-100 rounded-box shadow-md mb-3">
+            <div
+              class="bg-slate-300 rounded-full size-10 flex justify-center items-center"
+            >
+              <img class="  " src="assets/wallet1.png" />
+            </div>
+            <div>
+              <div class="font-bold">Electricity Bill</div>
+              <div class="text-xs uppercase font-semibold opacity-60">
+                Today 01.44 AM
+              </div>
+            </div>
+            <button class="btn btn-square btn-ghost">
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </button>
+          </li>
+          <li class="list-row list bg-base-100 rounded-box shadow-md mb-3">
+            <div
+              class="bg-slate-300 rounded-full size-10 flex justify-center items-center"
+            >
+              <img class="  " src="assets/wallet1.png" />
+            </div>
+            <div>
+              <div class="font-bold">Bank Deposit</div>
+              <div class="text-xs uppercase font-semibold opacity-60">
+                Today 01.44 AM
+              </div>
+            </div>
+            <button class="btn btn-square btn-ghost">
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </button>
+          </li>
+          <li class="list-row list bg-base-100 rounded-box shadow-md mb-3">
+            <div
+              class="bg-slate-300 rounded-full size-10 flex justify-center items-center"
+            >
+              <img class="  " src="assets/wallet1.png" />
+            </div>
+            <div>
+              <div class="font-bold">Mobile Recharge</div>
+              <div class="text-xs uppercase font-semibold opacity-60">
+                Today 01.44 AM
+              </div>
+            </div>
+            <button class="btn btn-square btn-ghost">
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </button>
+          </li>
+          <li class="list-row list bg-base-100 rounded-box shadow-md mb-3">
+            <div
+              class="bg-slate-300 rounded-full size-10 flex justify-center items-center"
+            >
+              <img class="  " src="assets/wallet1.png" />
+            </div>
+            <div>
+              <div class="font-bold">Gas Bill</div>
+              <div class="text-xs uppercase font-semibold opacity-60">
+                Today 01.44 AM
+              </div>
+            </div>
+            <button class="btn btn-square btn-ghost">
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </button>
+          </li>
+        </div>
+      </div>
+      <!-- 00 -->
       <!-- Add money form -->
-      <div id="add-money-parent" class="parent mb-[80px]">
+      <div id="add-money-parent" style="display: none" class="parent mb-[80px]">
         <!-- child -->
         <div class="sparent">
           <h1 class="ml-5 my-[20px] font-bold text-[19px]">Add Money</h1>
