added the simple code changes using functions

--- a/home.html
+++ b/home.html
@@ -58,42 +58,42 @@
         <!-- child -->
         <div
           id="button-add-money"
-          class="text-center p-4 rounded-xl border-[1px] border-gray-300"
+          class="form-btn text-center p-4 rounded-xl border-[1px] border-gray-300"
         >
           <img src="assets/wallet1.png" class="mx-auto" alt="" />
           <h2>Add Money</h2>
         </div>
         <div
           id="button-cashout"
-          class="text-center p-4 rounded-xl border-[1px] border-gray-300"
+          class="form-btn text-center p-4 rounded-xl border-[1px] border-gray-300"
         >
           <img src="assets/send1.png" class="mx-auto" alt="" />
           <h2>Cashout Money</h2>
         </div>
         <div
           id="btn-transfer-money"
-          class="text-center p-4 rounded-xl border-[1px] border-gray-300"
+          class="form-btn text-center p-4 rounded-xl border-[1px] border-gray-300"
         >
           <img src="assets/money1.png" class="mx-auto" alt="" />
           <h2>Transfer Money</h2>
         </div>
         <div
           id="card-bonus"
-          class="text-center p-4 rounded-xl border-[1px] border-gray-300"
+          class="form-btn text-center p-4 rounded-xl border-[1px] border-gray-300"
         >
           <img src="assets/bonus1.png" class="mx-auto" alt="" />
           <h2>Get Bonus</h2>
         </div>
         <div
           id="card-pay-bill"
-          class="text-center p-4 rounded-xl border-[1px] border-gray-300"
+          class="form-btn text-center p-4 rounded-xl border-[1px] border-gray-300"
         >
           <img src="assets/purse1.png" class="mx-auto" alt="" />
           <h2>Pay Bill</h2>
         </div>
         <div
           id="card-transactions"
-          class="text-center p-4 rounded-xl border-[1px] border-gray-300"
+          class="form-btn text-center p-4 rounded-xl border-[1px] border-gray-300"
         >
           <img src="assets/transaction1.png" class="mx-auto" alt="" />
           <h2>Transactions</h2>
@@ -103,7 +103,7 @@
     <!-- all the card and form section parent  -->
     <div class="all-form-section">
       <!-- latest section -->
-      <div id="latest-section">
+      <div id="latest-section" class="form">
         <div class="flex justify-between items-center">
           <h1 class="ml-4 my-[20px] font-bold text-[19px]">Latest Payment</h1>
           <p class="text-gray-400 mr-4">View All</p>
@@ -178,7 +178,11 @@
       </div>
       <!-- 00 -->
       <!-- Add money form -->
-      <div id="add-money-parent" style="display: none" class="parent mb-[80px]">
+      <div
+        id="add-money-parent"
+        style="display: none"
+        class="form parent mb-[80px]"
+      >
         <!-- child -->
         <div class="sparent">
           <h1 class="ml-5 my-[20px] font-bold text-[19px]">Add Money</h1>
@@ -235,7 +239,7 @@
         </div>
       </div>
       <!-- second form starts here -->
-      <div id="cash-out-parent" style="display: none">
+      <div id="cash-out-parent" class="form" style="display: none">
         <h1 class="ml-5 my-[20px] font-bold text-[19px]">Cash Out</h1>
         <form class="bg-white rounded-2xl p-8 mb-11">
           <div class="mb-3">
@@ -277,7 +281,7 @@
         </form>
       </div>
       <!-- transfer section starts -->
-      <div id="transfer-parent" style="display: none">
+      <div id="transfer-parent" class="form" style="display: none">
         <h1 class="ml-5 my-[20px] font-bold text-[19px]">Transfer Money</h1>
         <form class="bg-white rounded-2xl p-8 mb-11">
           <div class="mb-3">
@@ -319,7 +323,7 @@
         </form>
       </div>
       <!-- Bonus section -->
-      <div id="bonus-parent" style="display: none">
+      <div id="bonus-parent" class="form" style="display: none">
         <h1 class="ml-5 my-[20px] font-bold text-[19px]">Get Bonus</h1>
         <form class="bg-white rounded-2xl p-8 mb-11">
           <div class="mb-3">
@@ -341,7 +345,11 @@
         </form>
       </div>
       <!-- Pay bills starts -->
-      <div id="pay-bill-parent" style="display: none" class="parent mb-[80px]">
+      <div
+        id="pay-bill-parent"
+        style="display: none"
+        class="form parent mb-[80px]"
+      >
         <h1 class="ml-5 my-[20px] font-bold text-[19px]">Pay Bill</h1>
         <form class="bg-white rounded-2xl p-8 mb-11">
           <div class="mb-3">
@@ -396,7 +404,7 @@
         </form>
       </div>
       <!-- transaction section starts here -->
-      <div id="transaction-parent" style="display: none">
+      <div id="transaction-parent" class="form" style="display: none">
         <div class="flex justify-between items-center">
           <h1 class="ml-4 my-[20px] font-bold text-[19px]">Transfer History</h1>
           <p class="text-gray-400 mr-4">View All</p>
